[package]
name = "ImageMatcher"
version = "0.1.0"
authors = ["hodasemi <michaelh.95@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { git = "https://github.com/hodasemi/Context" }
image = "0.23"
float-cmp = "0.6"